--- a/config.json
+++ b/config.json
@@ -1,5 +1,3 @@
 {
-  "testServer": "1055188344188973066",
-  "chatBotChannel": "1063037672416882728",
-  "devs": ["1049343381903515778"]
+  "chatBotChannel": "1063037672416882728"
 }
